--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -2314,7 +2314,101 @@ class Solution {
 
 
 
+### 四十六、二叉树展开为链表
+
+```java
+class Solution {
+    TreeNode pre;
+
+    // 反前序遍历
+    public void flatten(TreeNode root) {
+        if (root == null){
+            return;
+        }
+        // 右
+        flatten(root.right);
+        // 左
+        flatten(root.left);
+        // 中
+        root.right = pre;
+        root.left = null;
+        pre = root;
+    }
+}
+```
 
 
 
+### 四十七、从前序与中序遍历序列构造二叉树
+
+```java
+class Solution {
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        return traversal(preorder, 0, preorder.length,
+                        inorder, 0, preorder.length);
+    }
+
+    public TreeNode traversal(int[] preorder, int start1, int end1,
+                            int[] inorder, int start2, int end2){
+        if(end1 - start1 <= 0){
+            return null;
+        }
+
+        int rootVal = preorder[start1];
+        TreeNode root = new TreeNode(rootVal);
+
+        for(int i = start2; i < end2; i++){
+            // 遍历中序数组找到根节点
+            if(inorder[i] == rootVal){
+                // 左节点，(i - start2) 是左子树有多少个节点
+                root.left = traversal(preorder, start1 + 1, start1 + 1 + (i - start2),
+                                        inorder, start2, i);
+                // 右节点
+                root.right = traversal(preorder, start1 + 1 + (i - start2), end1,
+                                        inorder, i + 1, end2);
+                break;
+            }
+        }
+
+        return root;
+    }              
+}
+```
+
+
+
+### 四十八、路径总和Ⅲ
+
+前缀和题解：
+
+```java
+class Solution {
+    public int pathSum(TreeNode root, int targetSum) {
+        Map<Long, Integer> prefix = new HashMap<Long, Integer>();
+        prefix.put(0L, 1);
+        return dfs(root, prefix, 0, targetSum);
+    }
+
+    public int dfs(TreeNode root, Map<Long, Integer> prefix, long curr, int targetSum) {
+        if (root == null) {
+            return 0;
+        }
+
+        int ret = 0;		// 返回结果数
+        curr += root.val;	// 计算当前总和
+		
+        // 计算当前前缀和集合内满足的个数
+        ret = prefix.getOrDefault(curr - targetSum, 0);
+        // 把当前总和加入到前缀和集合中
+        prefix.put(curr, prefix.getOrDefault(curr, 0) + 1);
+      	// 计算子节点满足的个数
+        ret += dfs(root.left, prefix, curr, targetSum);
+        ret += dfs(root.right, prefix, curr, targetSum);
+      	// 恢复，因为需要返回到父节点
+        prefix.put(curr, prefix.getOrDefault(curr, 0) - 1);
+
+        return ret;
+    }
+}
+```
 
