--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -2412,3 +2412,184 @@ class Solution {
 }
 ```
 
+
+
+### 四十九、二叉树的最近公共祖先
+
+```java
+class Solution {
+    TreeNode result;
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        traversal(root, p.val, q.val);
+        return result;
+    }
+
+    public int traversal(TreeNode root, int p, int q){
+        if(root == null){
+            return 0;
+        }
+
+        int num = 0;
+        // 左
+        num += traversal(root.left, p, q);
+        // 右
+        num += traversal(root.right, p, q);
+
+        // 中
+        // 如果左右节点各有一个，那么当前节点为祖先
+        if(num == 2){
+            result = root;
+            return 0;
+        }
+
+        if(root.val == p || root.val == q){
+            // 如果有一个满足，且当前节点也满足，则当前节点也是祖先
+            if(num == 1){
+                result = root;
+            }
+            return 1;
+        }
+
+        return num;
+    }
+}
+```
+
+
+
+
+
+### 五十、二叉树中的最大路径和
+
+```java
+class Solution {
+    int result = Integer.MIN_VALUE;
+    public int maxPathSum(TreeNode root) {
+        traversal(root);
+
+        return result;
+    }
+
+    public int traversal(TreeNode root){
+        if(root == null){
+            return 0;
+        }
+
+        int num = root.val;
+        // 记录左右节点是否被拼接
+        boolean tag1 = false, tag2 = false;
+        int left = traversal(root.left);
+        int right = traversal(root.right);
+
+        if(left > 0){
+            num += left;
+            tag1 = true;
+        }
+        if(right > 0){
+            num += right;
+            tag2 = true;
+        }
+        // 记录最大值时，可以加上两子节点
+        result = Math.max(num, result);
+
+        if(tag1 && tag2){
+            // 如果左右节点都被拼接，在返回时，只能选择一边进行返回，所有减去较小的
+            num -= left < right ? left : right;
+        }
+
+        return num;
+    }
+}
+```
+
+
+
+## 九、图论
+
+### 五十一、岛屿数量
+
+```java
+class Solution {
+    public int numIslands(char[][] grid) {
+        int row = grid.length;
+        int column = grid[0].length;
+
+        int result = 0;
+        for(int i = 0; i < row; i++){
+            for(int j = 0; j < column; j++){
+                if(grid[i][j] == '1'){
+                    result++;
+                    islands(grid, i, j);
+                }
+            }
+        }
+        
+        return result;
+    }
+
+    public void islands(char[][] grid, int row, int column){
+        grid[row][column] = '2';
+
+        // 上
+        if(row > 0 && grid[row-1][column] == '1'){
+            islands(grid, row - 1, column);
+        }
+
+        // 下
+        if(row < grid.length - 1 && grid[row+1][column] == '1'){
+            islands(grid, row + 1, column);
+        }
+
+        // 左
+        if(column > 0 && grid[row][column-1] == '1'){
+            islands(grid, row, column - 1);
+        }
+
+        // 右
+        if(column < grid[0].length - 1 && grid[row][column+1] == '1'){
+            islands(grid, row, column + 1);
+        }
+    }
+}
+```
+
+
+
+深搜改进
+
+```java
+class Solution {
+    public int numIslands(char[][] grid) {
+        int row = grid.length;
+        int column = grid[0].length;
+
+        int result = 0;
+        for(int i = 0; i < row; i++){
+            for(int j = 0; j < column; j++){
+                if(grid[i][j] == '1'){
+                    result++;
+                    islands(grid, i, j);
+                }
+            }
+        }
+        
+        return result;
+    }
+
+    public void islands(char[][] grid, int row, int column){
+        if(row < 0 || row >= grid.length || column < 0 || column >= grid[0].length || grid[row][column] == '0'){
+            return;
+        }
+
+        grid[row][column] = '0';
+
+        islands(grid, row - 1, column);
+        islands(grid, row + 1, column);
+        islands(grid, row, column - 1);
+        islands(grid, row, column + 1);
+    }
+}
+```
+
+
+
