--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -2593,3 +2593,130 @@ class Solution {
 
 
 
+### 五十二、腐烂的橘子
+
+```java
+class Solution {
+    // 统计最长感染时间，用 minutes + 2 表示
+    int result = 2;
+    public int orangesRotting(int[][] grid) {
+        int row = grid.length;
+        int column = grid[0].length;
+
+        for(int i = 0; i < row; i++){
+            for(int j = 0; j < column; j++){
+                if(grid[i][j] == 2){
+                    // 遇到已经腐烂的橘子
+                    dfs(grid, i + 1, j, 3);
+                    dfs(grid, i - 1, j, 3);
+                    dfs(grid, i, j + 1, 3);
+                    dfs(grid, i, j - 1, 3);
+                }
+            }
+        }
+
+        for(int i = 0; i < row; i++){
+            for(int j = 0; j < column; j++){
+                if(grid[i][j] == 1){
+                    // 遇到未感染的，说明感染不了
+                    return -1;
+                }
+                // 统计感染时间
+                result = Math.max(result, grid[i][j]);
+            }
+        }
+
+        return result - 2;
+    }
+
+    public void dfs(int[][] grid, int row, int column, int minutes){
+        // 遇到空格子 或 腐烂橘子就返回
+        if(row < 0 || row >= grid.length || column < 0 || column >= grid[0].length || 
+                                    grid[row][column] == 0 || grid[row][column] == 2){
+            return;
+        }
+
+        // 遇到已经被感染过 且 时间大于等于感染时间的 也返回
+        if(grid[row][column] > 2 && minutes >= grid[row][column]){
+            return;
+        }
+
+        if(grid[row][column] > 2 && minutes < grid[row][column]){
+            // 遇到已经被感染过 且 时间小于感染时间的 重新设置时间
+            // 因为它被更近的橘子感染了
+            grid[row][column] = minutes;
+        }else if(grid[row][column] == 1){
+            // 未感染的橘子设置时间
+            grid[row][column] = minutes;
+        }
+        
+        dfs(grid, row + 1, column, minutes + 1);
+        dfs(grid, row - 1, column, minutes + 1);
+        dfs(grid, row, column + 1, minutes + 1);
+        dfs(grid, row, column - 1, minutes + 1);
+    }
+}
+```
+
+
+
+### 五十三、课程表（难）
+
+DFS 方法通过检测图中是否存在环来判断课程能否完成：
+
+1. **构建图：** 使用邻接表来表示课程之间的依赖关系。
+2. DFS 遍历：
+   - 使用一个状态数组 `state`，记录每个节点的状态：未访问、正在访问、已访问。
+   - 如果在 DFS 遍历过程中，发现某个节点正在访问中，说明存在环。
+3. **判断结果：** 如果 DFS 遍历过程中未检测到环，则可以完成所有课程。
+
+```java
+public class Solution {
+    public boolean canFinish(int numCourses, int[][] prerequisites) {
+        // 构建图
+        List<List<Integer>> graph = new ArrayList<>();
+        for (int i = 0; i < numCourses; i++) {
+            graph.add(new ArrayList<>());
+        }
+        
+        for (int[] pre : prerequisites) {
+            int course = pre[0];
+            int prereq = pre[1];
+            graph.get(prereq).add(course);
+        }
+        
+        // 初始化状态数组
+        int[] state = new int[numCourses];
+        
+        // 对每个节点进行DFS
+        for (int i = 0; i < numCourses; i++) {
+            if (hasCycle(graph, state, i)) {
+                return false;
+            }
+        }
+        
+        return true;
+    }
+    
+    // 检测环的DFS方法
+    private boolean hasCycle(List<List<Integer>> graph, int[] state, int course) {
+        if (state[course] == 1) { // 正在访问
+            return true;
+        }
+        if (state[course] == 2) { // 已访问
+            return false;
+        }
+        
+        state[course] = 1; // 标记为正在访问
+        for (int nextCourse : graph.get(course)) {
+            if (hasCycle(graph, state, nextCourse)) {
+                return true;
+            }
+        }
+        state[course] = 2; // 标记为已访问
+        
+        return false;
+    }
+}
+```
+
