--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -2720,3 +2720,712 @@ public class Solution {
 }
 ```
 
+
+
+### 五十四、实现 Trie（前缀树）
+
+```java
+public class Trie {
+
+    private TrieNode root;
+
+    // 初始化 Trie
+    public Trie() {
+        root = new TrieNode();
+    }
+
+    // 插入单词
+    public void insert(String word) {
+        TrieNode current = root;
+        for (char ch : word.toCharArray()) {
+            int index = ch - 'a'; // 计算字符在数组中的位置
+            if (current.children[index] == null) {
+                current.children[index] = new TrieNode();
+            }
+            current = current.children[index];
+        }
+        current.isEndOfWord = true; // 标记完整单词
+    }
+
+    // 搜索单词
+    public boolean search(String word) {
+        TrieNode node = searchNode(word);
+        return node != null && node.isEndOfWord;
+    }
+
+    // 搜索前缀
+    public boolean startsWith(String prefix) {
+        TrieNode node = searchNode(prefix);
+        return node != null;
+    }
+
+    // 辅助方法：搜索节点
+    private TrieNode searchNode(String str) {
+        TrieNode current = root;
+        for (char ch : str.toCharArray()) {
+            int index = ch - 'a';
+            if (current.children[index] == null) {
+                return null;
+            }
+            current = current.children[index];
+        }
+        return current;
+    }
+}
+
+class TrieNode {
+    // 指向子节点的指针数组，假设只处理小写字母
+    TrieNode[] children;
+    // 是否为完整单词的标志
+    boolean isEndOfWord;
+
+    // 初始化节点
+    public TrieNode() {
+        // 26 个字母
+        children = new TrieNode[26];
+        isEndOfWord = false;
+    }
+}
+```
+
+
+
+
+
+## 十、回溯
+
+### 五十五、全排列
+
+```java
+class Solution {
+    List<List<Integer>> result = new ArrayList<>();
+    List<Integer> path = new LinkedList<>();
+    boolean[] used;
+
+    public List<List<Integer>> permute(int[] nums) {
+        used = new boolean[nums.length];
+        backtracking(nums);
+
+        return result;
+    }
+
+    public void backtracking(int[] nums){
+        if(path.size() == nums.length){
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for(int i = 0; i < nums.length; i++){
+            if(used[i]){
+                continue;
+            }
+
+            path.add(nums[i]);
+            used[i] = true;
+            backtracking(nums);
+            used[i] = false;
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
+### 五十六、子集
+
+```java
+class Solution {
+    List<List<Integer>> result = new ArrayList<>();
+    List<Integer> path = new LinkedList<>();
+
+    public List<List<Integer>> subsets(int[] nums) {
+        backtracking(nums, 0);
+
+        return result;
+    }
+
+    public void backtracking(int[] nums, int index){
+        result.add(new LinkedList<>(path));
+        
+        if(index >= nums.length){
+            return;
+        }
+
+        for(int i = index; i < nums.length; i++){
+            path.add(nums[i]);
+            backtracking(nums, i + 1);
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
+### 五十七、电话号码的字母组合
+
+```java
+class Solution {
+    char[][] arr = {{}, {}, {'a', 'b', 'c'}, {'d', 'e', 'f'},
+            {'g', 'h', 'i'}, {'j', 'k', 'l'}, {'m', 'n', 'o'},
+            {'p', 'q', 'r', 's'}, {'t', 'u', 'v'}, {'w', 'x', 'y', 'z'}};
+
+    List<String> result = new ArrayList<>();
+    StringBuilder path = new StringBuilder();
+
+    public List<String> letterCombinations(String digits) {
+        int length = digits.length();
+        if (length == 0) {
+            return result;
+        }
+		// 把传入参数转换为数组
+        int[] digitsArray = new int[length];
+        for (int i = 0; i < length; i++) {
+            digitsArray[i] = digits.charAt(i) - '0';
+        }
+
+        backtracking(digitsArray, 0, length);
+
+        return result;
+    }
+
+    public void backtracking(int[] num, int index, int len) {
+        if (index == len) {
+            result.add(path.toString());
+            return;
+        }
+
+        for (int j = 0; j < arr[num[index]].length; j++) {
+            path.append(arr[num[index]][j]);
+            backtracking(num, index + 1, len); 
+            path.deleteCharAt(path.length() - 1);
+        }
+    }
+}
+```
+
+
+
+### 五十八、组合总和
+
+```java
+class Solution {
+    List<List<Integer>> result = new ArrayList<>();
+    List<Integer> path = new LinkedList<>();
+    int sum = 0;
+
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        Arrays.sort(candidates);
+        backtracking(candidates, target, 0);
+
+        return result;
+    }
+
+    public void backtracking(int[] array, int target, int index){
+        if(sum == target){
+            result.add(new LinkedList<>(path));
+            return;
+        }
+
+        if(sum > target){
+            return;
+        }
+
+        for(int i = index; i < array.length; i++){
+            path.add(array[i]);
+            sum += array[i];
+            backtracking(array, target, i);
+            sum -= array[i];
+            path.removeLast();
+        }
+    }
+}
+```
+
+
+
+### 五十九、括号生成
+
+```java
+class Solution {
+   StringBuffer path = new StringBuffer();
+   List<String> res = new ArrayList<>();
+
+   public List<String> generateParenthesis(int n) {
+       backtracking(0, 0, n);
+       return res;
+   }
+
+   void backtracking(int l, int r, int n) {
+       if (l > n || l < r) { // 剪枝
+           return;
+       }
+       if (path.length() == 2 * n) {
+           res.add(path.toString());
+       }
+       for (int i = 0; i < 2; i++) { // 将括号看作大小为 2 的数组，求他们的有效组合，括号个数决定了树的深度
+           if (i == 0) {
+               path.append("(");
+               backtracking(l + 1, r, n);
+               path.deleteCharAt(path.length() - 1); // 回溯
+           }
+           if (i == 1) {
+               path.append(")");
+               backtracking(l, r + 1, n);
+               path.deleteCharAt(path.length() - 1); // 回溯
+           }
+       }
+   }
+}
+```
+
+
+
+### 六十、单词搜索
+
+```java
+class Solution {
+    int number = 0;
+    boolean result = false;
+    boolean[][] used;
+
+    public boolean exist(char[][] board, String word) {
+        int len = word.length();
+        int rowLength = board.length;
+        int columnLength = board[0].length;
+
+        for(int i = 0; i < rowLength; i++){
+            for(int j = 0; j < columnLength; j++){
+                if(word.charAt(0) == board[i][j]){  //剪枝
+                    used = new boolean[rowLength][columnLength];
+                    number = 0;
+                    backtracking(board, word, 0, i, j);
+                }
+            }
+            if(result){
+                break;
+            }
+        }
+
+        return result;
+    }
+
+    public void backtracking(char[][] board, String word, int index, int row, int column){
+        if(number == word.length()){
+            result = true;
+            return;
+        }
+
+        // 判断是否越界
+        if(row < 0 || row >= board.length || column < 0 || column >= board[0].length){
+            return;
+        }
+
+        // 如果 字母已经使用过 或 字母不匹配 就返回
+        if(used[row][column] || board[row][column] != word.charAt(index)){
+            return;
+        }
+
+        number++;
+        used[row][column] = true;
+        backtracking(board, word, number, row + 1, column);
+        backtracking(board, word, number, row - 1, column);
+        backtracking(board, word, number, row, column + 1);
+        backtracking(board, word, number, row, column - 1);
+        used[row][column] = false;
+        number--;
+    }
+}
+```
+
+
+
+### 六十一、分割回文串
+
+```java
+class Solution {
+    List<List<String>> result = new ArrayList<>();
+    List<String> sub = new LinkedList<>();
+
+    public List<List<String>> partition(String s) {
+        int len = s.length();
+        backtracking(s, 0);
+
+        return result;
+    }
+
+    // 回溯算法
+    public void backtracking(String s, int index){
+        if(index >= s.length()){
+            result.add(new ArrayList<>(sub));
+            return;
+        }
+
+        for(int i = index; i < s.length(); i++){
+            if(isPalindrome(s.substring(index, i + 1))){
+                sub.add(s.substring(index, i + 1));
+                backtracking(s, i + 1);
+                sub.removeLast();
+            }
+        }
+    }
+
+    //判断是否为回文串
+    public boolean isPalindrome(String s){
+        if(s.length() == 0){
+            return false;
+        }
+
+        int left = 0, right = s.length() - 1;   // 左右指针
+
+        while(left <= right ){
+            if(s.charAt(left) != s.charAt(right)){
+                return false;
+            }
+
+            left++;
+            right--;
+        }
+
+        return true;
+    }
+}
+```
+
+
+
+
+
+### 六十二、N皇后
+
+```java
+class Solution {
+    List<List<String>> result = new ArrayList<>();
+    LinkedList<String> path = new LinkedList<>();
+    StringBuilder sb = new StringBuilder();
+
+    public List<List<String>> solveNQueens(int n) {
+        for (int i = 0; i < n; i++) {
+            sb.append(".");
+        }
+        backtracking(n, 0, new boolean[n][n]);
+
+        return result;
+    }
+
+    public void backtracking(int n, int floor, boolean[][] used) {
+        if (path.size() == n) {
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for (int i = 0; i < n; i++) {
+            if (!used[floor][i]) {
+                sb.setCharAt(i, 'Q');   // 放的地方设置为 Q
+                path.add(sb.toString());    
+                sb.setCharAt(i, '.');   // 恢复
+                backtracking(n, floor + 1, put(i, floor, n, used));
+                path.remove(path.size() - 1);
+            }
+        }
+    }
+
+    // 下棋，将横竖，斜线都设置为true
+    public boolean[][] put(int x, int y, int n, boolean[][] used) {
+        //主要是这里要创建一个新的数组，不然都直接传引用，直接共用一个了
+        boolean[][] used2 = new boolean[n][n];
+
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                used2[i][j] = used[i][j];
+            }
+        }
+
+        //竖
+        for (int i = 0; i < n; i++) {
+            used2[i][x] = true;
+        }
+
+        //左上
+        for (int i = x,j = y; i >= 0 && j >= 0; i--,j--) {
+            used2[j][i] = true;
+        }
+
+        //左下
+        for (int i = x, j = y; i >= 0 && j < n; i--, j++) {
+            used2[j][i] = true;
+        }
+
+        //右上
+        for (int i = x, j = y; i < n && j >= 0; i++, j--) {
+            used2[j][i] = true;
+        }
+
+        //右下
+        for (int i = x,  j = y; i < n && j < n; i++,  j++) {
+            used2[j][i] = true;
+        }
+
+        return used2;
+    }
+}
+```
+
+
+
+
+
+
+
+## 十一、二分查找
+
+### 六十三、搜索插入位置
+
+```java
+class Solution {
+    public int searchInsert(int[] nums, int target) {
+        int len = nums.length;
+        int left = 0, right = len - 1;
+
+        while(left <= right){
+            int mid = (left + right) / 2;
+            if(nums[mid] < target){
+                left = mid + 1;
+            }else{
+                right = mid - 1;
+            }
+        }
+
+        return left;
+    }
+}
+```
+
+
+
+
+
+### 六十四、搜索二维矩阵
+
+```java
+class Solution {
+    public boolean searchMatrix(int[][] matrix, int target) {
+        int m = matrix.length;
+        int n = matrix[0].length;
+        int left = 0;
+        int right = m * n - 1;
+
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            int midValue = matrix[mid / n][mid % n];
+
+            if (midValue == target) {
+                return true;
+            } else if (midValue < target) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+
+        return false;
+    }
+}
+```
+
+
+
+### 六十五、在排序数组中查找元素的第一个和最后一个位置
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int left = 0;
+        int right = nums.length - 1;
+        int first = -1;
+        int last = -1;
+        // 找第一个等于target的位置
+        while (left <= right) {
+            int middle = (left + right) / 2;
+            if (nums[middle] == target) {
+                first = middle;
+                right = middle - 1; //重点
+            } else if (nums[middle] > target) {
+                right = middle - 1;
+            } else {
+                left = middle + 1;
+            }
+        }
+
+        // 最后一个等于target的位置
+        left = 0;
+        right = nums.length - 1;
+        while (left <= right) {
+            int middle = (left + right) / 2;
+            if (nums[middle] == target) {
+                last = middle;
+                left = middle + 1; //重点
+            } else if (nums[middle] > target) {
+                right = middle - 1;
+            } else {
+                left = middle + 1;
+            }
+        }
+
+        return new int[]{first, last};
+    }
+}
+```
+
+
+
+### 六十六、搜索旋转排序数组
+
+```java
+class Solution {
+    public int search(int[] nums, int target) {
+        int start = 0;
+        int end = nums.length - 1;
+
+        while (start <= end) {
+            int mid = start + (end - start) / 2;
+
+            if (nums[mid] == target) {
+                return mid;
+            }
+
+            // 判断哪一边是有序的
+            if (nums[start] <= nums[mid]) { // 左边有序
+                if (target >= nums[start] && target < nums[mid]) { // 目标值在左边
+                    end = mid - 1;
+                } else { // 目标值在右边
+                    start = mid + 1;
+                }
+            } else { // 右边有序
+                if (target > nums[mid] && target <= nums[end]) { // 目标值在右边
+                    start = mid + 1;
+                } else { // 目标值在左边
+                    end = mid - 1;
+                }
+            }
+        }
+
+        return -1; // 目标值不存在
+    }
+}
+```
+
+
+
+### 六十七、寻找旋转排序数组中的最小值
+
+```java
+class Solution {
+    public int findMin(int[] nums) {
+        int left = 0, right = nums.length - 1;
+        int min = Integer.MAX_VALUE;
+
+        while(left <= right){
+            int mid = (left + right) / 2;
+
+            if(nums[mid] <= nums[right]){
+                min = Math.min(min, nums[mid]);
+                right = mid - 1;
+            }else if(nums[mid] > nums[right]){
+                left = mid + 1;
+            }
+        }
+
+        return min;
+    }
+}
+```
+
+
+
+### 六十八、寻找两个正序数组的中位数（困难）
+
+```java
+class Solution {
+    public double findMedianSortedArrays(int[] nums1, int[] nums2) {
+        // 保证 nums1 是较短的数组
+        if (nums1.length > nums2.length) {
+            int[] temp = nums1;
+            nums1 = nums2;
+            nums2 = temp;
+        }
+
+        int x = nums1.length;
+        int y = nums2.length;
+        int low = 0;
+        int high = x;
+
+        while (low <= high) {
+            // 分割位置
+            int partitionX = (low + high) / 2;
+            int partitionY = (x + y + 1) / 2 - partitionX;
+
+            // 边界值处理
+            int maxX = (partitionX == 0) ? Integer.MIN_VALUE : nums1[partitionX - 1];
+            int minX = (partitionX == x) ? Integer.MAX_VALUE : nums1[partitionX];
+
+            int maxY = (partitionY == 0) ? Integer.MIN_VALUE : nums2[partitionY - 1];
+            int minY = (partitionY == y) ? Integer.MAX_VALUE : nums2[partitionY];
+
+            // 检查是否找到正确的分割点
+            if (maxX <= minY && maxY <= minX) {
+                // 如果总数是奇数
+                if ((x + y) % 2 == 1) {
+                    return Math.max(maxX, maxY);
+                } else {
+                    // 如果总数是偶数
+                    return (Math.max(maxX, maxY) + Math.min(minX, minY)) / 2.0;
+                }
+            } else if (maxX > minY) {
+                // 移动 high 向左
+                high = partitionX - 1;
+            } else {
+                // 移动 low 向右
+                low = partitionX + 1;
+            }
+        }
+
+        return 0;
+    }
+}
+```
+
+
+
+## 十二、栈
+
+```java
+class Solution {
+    public boolean isValid(String s) {
+        int len = s.length();
+        if(len == 1){
+            return false;
+        }
+
+        Stack<Character> stack = new Stack<>();
+
+        for(int i = 0; i < len; i++){
+            char c = s.charAt(i);
+
+            if(c == '[' || c == '(' || c == '{'){
+                stack.push(c);
+            }else if(c == ']' && (stack.empty() || stack.pop() != '[')){
+                return false;
+            }else if(c == ')' && (stack.empty() || stack.pop() != '(')){
+                return false;
+            }else if(c == '}' && (stack.empty() || stack.pop() != '{')){
+                return false;
+            }
+        }
+
+        return stack.empty();
+    }
+}
+```
+
