--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -3400,6 +3400,8 @@ class Solution {
 
 ## 十二、栈
 
+### 六十九、有效的括号
+
 ```java
 class Solution {
     public boolean isValid(String s) {
@@ -3425,6 +3427,115 @@ class Solution {
         }
 
         return stack.empty();
+    }
+}
+```
+
+
+
+
+
+### 七十、最小栈
+
+```java
+class MinStack {
+
+    Stack<Integer> stack;
+    int minVal;
+
+    public MinStack() {
+        stack = new Stack<>();
+        minVal = Integer.MAX_VALUE;
+    }
+    
+    public void push(int val) {
+        // 入栈前保存当前最小值【将当前最小值入栈】
+        stack.push(minVal);
+        stack.push(val);
+        minVal = Math.min(minVal, val);
+    }
+    
+    public void pop() {
+        // 出栈时，恢复上一个最小值
+        stack.pop();
+        int val = stack.pop();
+        minVal = val;
+    }
+    
+    public int top() {
+        return stack.peek();
+    }
+    
+    public int getMin() {
+        return minVal;
+    }
+}
+```
+
+
+
+### 七十一、字符串解码（难）
+
+```java
+class Solution {
+   public String decodeString(String s) {
+   Deque<Integer> countStack = new ArrayDeque<>(); // 存储数字
+   Deque<String> stringStack = new ArrayDeque<>(); // 存储字符串
+   String currentString = ""; // 当前解码字符串
+   int k = 0; // 当前的倍数
+
+   for (char ch : s.toCharArray()) {
+       if (Character.isDigit(ch)) {
+           k = k * 10 + (ch - '0'); // 处理多位数
+       } else if (ch == '[') {
+           // 遇到 '['，将当前的字符串和数字推入各自的栈
+           countStack.push(k);
+           stringStack.push(currentString);
+           currentString = ""; // 重置当前字符串
+           k = 0; // 重置倍数
+       } else if (ch == ']') {
+           // 遇到 ']'，解码
+           StringBuilder temp = new StringBuilder(stringStack.pop());
+           int repeatTimes = countStack.pop();
+           for (int i = 0; i < repeatTimes; i++) {
+               temp.append(currentString); // 重复当前字符串
+           }
+           currentString = temp.toString(); // 更新当前字符串
+       } else {
+           // 如果是字母，直接加到当前字符串
+           currentString += ch;
+       }
+   }
+
+   return currentString;
+}
+```
+
+
+
+
+
+### 七十二、每日温度
+
+```java
+class Solution {
+    public int[] dailyTemperatures(int[] temperatures) {
+        Deque<Integer> stack=new LinkedList<>();
+        int len = temperatures.length;
+        int[] answer = new int[len];
+
+        for(int i = 0; i < len; i++){
+            while(!stack.isEmpty() && temperatures[stack.peek()] < temperatures[i]){
+                // 如果当前温度大于前面存入的温度
+                // 取出，并计算距离
+                answer[stack.peek()] = i - stack.peek();
+                stack.pop();
+            }
+            // 入栈的是温度的下标，而不是温度，因为后面要计算距离
+            stack.push(i);
+        }
+
+        return answer;
     }
 }
 ```
