--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -3540,3 +3540,158 @@ class Solution {
 }
 ```
 
+
+
+### 七十三、柱状图中最大的矩形
+
+```java
+class Solution {
+
+    // 遍历柱子
+    // 比栈顶大的直接入栈，比栈顶小的取出计算面积，取出后此时栈顶就是左边的界限
+    // 就是，左边第一个比当前高度小的元素，因为实现的是单调栈
+
+    public int largestRectangleArea(int[] heights) {
+        // 创建一个栈来存储柱子的索引
+        Stack<Integer> stack = new Stack<>();
+        int maxArea = 0; // 用于存储最大矩形面积
+        int n = heights.length; // 柱子的数量
+        
+        // 遍历所有柱子，包括最后一个哨兵柱子
+        for (int i = 0; i <= n; i++) {
+            // 在数组末尾添加一个高度为0的柱子，确保所有元素都能被弹出处理
+            int currentHeight = (i == n) ? 0 : heights[i];
+            
+            // 当栈不为空且当前柱子高度小于栈顶柱子高度时，进行弹栈处理
+            while (!stack.isEmpty() && heights[stack.peek()] > currentHeight) {
+                // 获取并移除栈顶元素
+                int height = heights[stack.pop()];
+                
+                // 计算矩形的宽度
+                int width = stack.isEmpty() ? i : i - stack.peek() - 1;
+                
+                // 计算当前最大面积并更新最大矩形面积
+                maxArea = Math.max(maxArea, height * width);
+            }
+            
+            // 将当前柱子的索引推入栈
+            stack.push(i);
+        }
+        
+        return maxArea;
+    }
+}
+```
+
+
+
+## 十三、堆
+
+### 七十四、数组中的第K个最大元素（难）
+
+```java
+import java.util.Random;
+
+class Solution {
+    public int findKthLargest(int[] nums, int k) {
+        int len = nums.length;
+        int target = len - k;
+        int left = 0;
+        int right = len - 1;
+
+        while(true){
+            Random random = new Random();
+            // 基准下标
+            int pivotIndex = left + random.nextInt(right - left + 1);
+            // 分治函数
+            pivotIndex = partition(nums, left, right, pivotIndex);
+
+            if (target == pivotIndex) {
+                return nums[target];
+            } else if (target < pivotIndex) {
+                // 缩小范围
+                right = pivotIndex - 1;
+            } else {
+                // 缩小范围
+                left = pivotIndex + 1;
+            }
+        }
+    }
+
+    // 分治函数，在[left,right]内，把比基准数小的数放到基准左边，比基准数大的放到基准右边
+    private int partition(int[] nums, int left, int right, int pivotIndex) {
+        int pivot = nums[pivotIndex];
+        // 先把基准数移到最右边
+        swap(nums, pivotIndex, right);
+        int storeIndex = left;
+
+        for (int i = left; i <= right; i++) {
+            if (nums[i] < pivot) {
+                // 比基准小，放到左边
+                swap(nums, storeIndex, i);
+                storeIndex++;
+            }
+        }
+
+        // 把基准数放到正确的位置
+        swap(nums, storeIndex, right);
+        return storeIndex;
+    }
+
+    private void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
+
+
+
+### 七十五、前 K 个高频元素（难）
+
+**1. 统计频率**：首先需要统计每个元素出现的频率。这可以通过使用哈希表（`HashMap`）来实现。
+
+**2. 维护一个优先队列（小根堆）**：使用优先队列来维护频率最高的 `k` 个元素。
+
+**3. 输出结果**：从优先队列中提取出 `k` 个元素，这些元素就是数组中出现频率最高的 `k` 个元素。
+
+```java
+class Solution {
+    public int[] topKFrequent(int[] nums, int k) {
+        // 使用哈希表统计每个数字出现的频率
+        Map<Integer, Integer> frequencyMap = new HashMap<>();
+        for (int num : nums) {
+            frequencyMap.put(num, frequencyMap.getOrDefault(num, 0) + 1);
+        }
+
+        // 创建一个优先队列（小根堆）用于存储频率最高的K个元素
+        PriorityQueue<Map.Entry<Integer, Integer>> minHeap = 
+            new PriorityQueue<>((a, b) -> a.getValue() - b.getValue());
+
+        // 遍历频率表，维护一个大小为K的小根堆
+        for (Map.Entry<Integer, Integer> entry : frequencyMap.entrySet()) {
+            minHeap.add(entry);
+            // 如果堆的大小超过K，移除堆顶元素（频率最小的元素）
+            if (minHeap.size() > k) {
+                minHeap.poll();
+            }
+        }
+
+        // 提取堆中的元素，存入结果列表
+        List<Integer> resultList = new ArrayList<>();
+        while (!minHeap.isEmpty()) {
+            resultList.add(minHeap.poll().getKey());
+        }
+
+        // 将结果列表转换为数组并返回
+        int[] result = new int[resultList.size()];
+        for (int i = 0; i < result.length; i++) {
+            result[i] = resultList.get(i);
+        }
+        
+        return result;
+    }
+}
+```
+
