--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -3695,3 +3695,105 @@ class Solution {
 }
 ```
 
+
+
+### 七十六、数据流的中位数（难）
+
+```java
+class MedianFinder {
+
+    private PriorityQueue<Integer> maxHeap; // 最大堆（存储较小的一半）
+    private PriorityQueue<Integer> minHeap; // 最小堆（存储较大的一半）
+
+    public MedianFinder() {
+        // 初始化最大堆为降序排列
+        maxHeap = new PriorityQueue<>((a, b) -> b - a);
+        // 初始化最小堆为升序排列
+        minHeap = new PriorityQueue<>();
+    }
+
+    public void addNum(int num) {
+        // 先将数字加入最大堆
+        maxHeap.offer(num);
+        
+        // 保证最大堆的堆顶元素小于等于最小堆的堆顶元素
+        if (!minHeap.isEmpty() && maxHeap.peek() > minHeap.peek()) {
+            minHeap.offer(maxHeap.poll());
+        }
+
+        // 保证两个堆的大小平衡，最大堆可以比最小堆多一个元素
+        if (maxHeap.size() > minHeap.size() + 1) {
+            minHeap.offer(maxHeap.poll());
+        } else if (minHeap.size() > maxHeap.size()) {
+            maxHeap.offer(minHeap.poll());
+        }
+    }
+
+    public double findMedian() {
+        // 如果最大堆的大小大于最小堆，说明总数是奇数
+        if (maxHeap.size() > minHeap.size()) {
+            return maxHeap.peek();
+        }
+        // 否则，总数是偶数
+        return (maxHeap.peek() + minHeap.peek()) / 2.0;
+    }
+}
+```
+
+
+
+
+
+## 十四、贪心算法
+
+### 七十七、买卖股票的最佳时机
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[] dp = new int[2];
+        dp[0] -= prices[0];
+        dp[1] = 0;
+
+        for(int i = 1; i < prices.length; i++){
+            //第i天不持有股票
+            //【卖掉 第i-1天的股票】 和 【保持第i-1天不持有股票状态】 取最大
+            dp[1] = Math.max(dp[1], dp[0] + prices[i]);
+            //第i天持有股票
+            //【买第i天的股票】 和 【保持第i-1天持有股票状态】 取最大
+            dp[0] = Math.max(dp[0], -prices[i]);
+        }
+
+        return dp[1];
+    }
+}
+```
+
+
+
+### 七十八、跳跃游戏
+
+```java
+class Solution {
+    public boolean canJump(int[] nums) {
+        if(nums.length == 1){
+            return true;
+        }
+
+        // 可以到达的最远距离
+        int range = nums[0];
+
+        for(int i = 0; i <= range; i++){
+            // 更新最远距离
+            range = Math.max(i + nums[i], range);
+            
+            if(range >= nums.length - 1){
+                return true;
+            }
+        }
+
+        return false;
+    }
+}
+```
+
