--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -3797,3 +3797,214 @@ class Solution {
 }
 ```
 
+
+
+### 七十九、跳跃游戏Ⅱ
+
+```java
+class Solution {
+    public int jump(int[] nums) {
+        if(nums.length == 1) return 0;
+
+        int step = 1;
+        int lastFarthest = nums[0];
+        int farthest = nums[0];
+
+        for(int i=0;i < nums.length;i++){
+            if(i > lastFarthest) {
+                lastFarthest = farthest;
+                step++;
+            }
+
+            farthest = Math.max(nums[i] + i, farthest);
+
+            if(lastFarthest >= nums.length - 1){
+                return step;
+            }
+        }
+
+        return step;
+    }
+}
+```
+
+
+
+### 八十、划分字母区间（难）
+
+```java
+class Solution {
+    public List<Integer> partitionLabels(String s) {
+        List<Integer> list = new LinkedList<>();
+        // 这个数组记录每个字符出现的最远下标
+        int[] edge = new int[26];
+
+        char[] chars = s.toCharArray();
+
+        for (int i = 0; i < chars.length; i++) {
+            edge[chars[i] - 'a'] = i;
+        }
+
+        // 记录遍历的下标
+        int idx = 0;
+        // 记录上一串字符的结尾下标，方便计算长度
+        int last = -1;
+        for (int i = 0; i < chars.length; i++) {
+            idx = Math.max(idx,edge[chars[i] - 'a']);
+            if (i == idx) {
+                list.add(i - last);
+                last = i;
+            }
+        }
+        return list;
+    }
+}
+```
+
+
+
+## 十五、动态规划
+
+### 八十一、爬楼梯
+
+```java
+class Solution {
+    public int climbStairs(int n) {
+        int[] dp = new int[n + 1];
+        dp[0] = 1;
+        dp[1] = 1;
+
+        for(int i = 2; i <= n; i++){
+            dp[i] = dp[i-1] + dp[i-2];
+        }
+
+        return dp[n];
+    }
+}
+```
+
+
+
+### 八十二、杨辉三角
+
+```java
+class Solution {
+    public List<List<Integer>> generate(int numRows) {
+        List<List<Integer>> result = new ArrayList<>();
+        List<Integer> path = new LinkedList<>();
+
+        path.add(1);
+        result.add(new LinkedList<>(path));
+
+        if(numRows == 1){
+            return result;
+        }
+        path.clear();
+
+        for(int i = 2; i <= numRows; i++){
+            // 通过上一行计算到下一行的中间部分
+            for(int j = 0; j < path.size() - 1; j++){
+                path.set(j, path.get(j) + path.get(j + 1));
+
+                if(j == path.size() - 2){
+                    path.removeLast();
+                }
+            }
+            // 添加上前后的1
+            path.addFirst(1);
+            path.addLast(1);
+
+            result.add(new LinkedList<>(path));
+        }
+
+        return result;
+    }
+}
+```
+
+
+
+
+
+### 八十三、打家劫舍
+
+```java
+class Solution {
+    public int rob(int[] nums) {
+        int len = nums.length;
+        if(len == 1){
+            return nums[0];
+        }
+
+        int[] dp = new int[len];
+
+        dp[0] = nums[0];
+        dp[1] = Math.max(nums[0], nums[1]);
+
+        for(int i = 2; i < len; i++){
+            // 偷当前房子：dp[i-2] + nums[i]
+            // 不偷当前房子：dp[i - 1]
+            dp[i] = Math.max(dp[i - 2] + nums[i], dp[i - 1]);
+        }
+
+        return dp[len-1];
+    }
+}
+```
+
+
+
+
+
+### 八十四、完全平方数
+
+```java
+class Solution {
+    public int numSquares(int n) {
+        int[] dp = new int[n + 1];
+
+        // 把完全平方数置为 1
+        for(int i = 1; i <= n; i++){
+            if(i * i > n){
+                break;
+            }
+            dp[i * i] = 1; 
+        }
+
+        for(int i = 1; i <= n; i++){
+            // 如果是完全平方数就跳过
+            if(dp[i] == 1){
+                continue;
+            }
+            // 先置为最大值
+            dp[i] = Integer.MAX_VALUE;
+
+            for(int j = 1; j < i / 2 + 1; j++){
+                dp[i] = Math.min(dp[i], dp[j] + dp[i - j]);
+            }
+        }
+
+        return dp[n];
+    }
+}
+```
+
+官方题解
+
+```java
+class Solution {
+    public int numSquares(int n) {
+        int[] dp = new int[n + 1];
+        for (int i = 1; i <= n; i++) {
+            int minn = Integer.MAX_VALUE;
+            for (int j = 1; j * j <= i; j++) {
+                minn = Math.min(minn, dp[i - j * j]);
+            }
+          // 因为上面计算的时候减去了 j * j 这个完全平方数组合，所以最后要加上
+            dp[i] = minn + 1;
+        }
+        return dp[n];
+    }
+}
+```
+
