--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -4008,3 +4008,94 @@ class Solution {
 }
 ```
 
+
+
+### 八十五、零钱兑换
+
+```java
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        Arrays.sort(coins);
+        int[] dp = new int[amount + 1];
+        dp[0] = 0;
+
+        for(int i = 1; i <= amount; i++){
+            // 将dp数组初始化为最大值
+            dp[i] = Integer.MAX_VALUE;
+            // 遍历每个钱币
+            for(int j = 0; j < coins.length; j++){
+                if(coins[j] > i){   // 如果钱币比目标值大，就 break
+                    break;
+                }
+                // 如果前面的目标值没有匹配项，就跳过
+                if(dp[i - coins[j]] == -1){
+                    continue;
+                }
+
+                dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
+            }
+            // 如果还是初始化值，说明不能匹配
+            if(dp[i] == Integer.MAX_VALUE){
+                dp[i] = -1;
+            }
+        }
+
+        return dp[amount];
+    }
+}
+```
+
+
+
+
+
+### 八十六、单词拆分（背包问题）难
+
+```java
+public class Solution {
+    public boolean wordBreak(String s, List<String> wordDict) {
+        Set<String> wordDictSet = new HashSet(wordDict);
+        boolean[] dp = new boolean[s.length() + 1];
+        dp[0] = true;
+        for (int i = 1; i <= s.length(); i++) {
+            for (int j = 0; j < i; j++) {
+                if (dp[j] && wordDictSet.contains(s.substring(j, i))) {
+                    dp[i] = true;
+                    break;
+                }
+            }
+        }
+        return dp[s.length()];
+    }
+}
+```
+
+
+
+### 八十七、最长递增子序列
+
+```java
+class Solution {
+    public int lengthOfLIS(int[] nums) {
+        int[] dp = new int[nums.length];
+        int res = 1;
+
+        for(int i = 0; i < nums.length; i++){
+            // 初始化为1，表示自身
+            dp[i] = 1;
+
+            for(int j = 0; j < i; j++){
+                // 从头遍历到当前元素，如果比当前元素小的，都可以算为递增，则+1
+                if(nums[j] < nums[i]){
+                    dp[i] = Math.max(dp[i], dp[j] + 1);
+                }
+            }
+            // 更新结果
+            res = Math.max(dp[i], res);
+        }
+
+        return res;
+    }
+}
+```
+
